<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="answerQuestionViewModel"
            type="com.johanlund.mathgame.screens.answerquestion.AnswerQuestionViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/userAnswerInput"
        android:layout_width="120dp"
        android:layout_height="63dp"
        android:inputType="numberSigned"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendBtn"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toEndOf="@id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Answer:"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/userAnswerInput"
        app:layout_constraintEnd_toStartOf="@+id/userAnswerInput"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userAnswerInput"
        app:layout_constraintVertical_bias="0.438" />

    <TextView
        android:id="@+id/mathQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="TextView"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/userAnswerInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="90dp"
        android:layout_height="66dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="SEND"
        app:layout_constraintBottom_toBottomOf="@+id/userAnswerInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userAnswerInput"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>