...
            android:layout_weight="1"
            android:gravity="left"
            android:text="Text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/levelTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Text"
            android:textSize="24sp" />
...
